crates/keron-lang/tests/corpus/errors/check/map_boolean_key_rejected.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `Boolean` is not a valid `Map` key type; allowed keys are `String` and `Int`
  --> 1:12
  |
1 | val flags: Map<Boolean, String> = {true: "on", false: "off"}
  |            ^^^^^^^^^^^^^^^^^^^^^
